Add value setting

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
+
+</html>
+
 <head>
   <meta charset="UTF-8">
   <title>Laskuri</title>
 </head>
+
 <body>
   <h2>Ohtulaskuri</h2>
   <div>nappia painettu {{ value }} kertaa</div>
@@ -17,5 +21,12 @@
       Nollaa
     </button>
   </form>
+  <form action="/set" method="POST">
+    <input type="text" name="new_value" placeholder="0">
+    <button type="submit">
+      Aseta
+    </button>
+  </form>
 </body>
+
 </html>
